--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="contenedor cuatro">
 
         <div class="mini-contenedor">
-          <a href="cayenne.html">Cayenne Turbo GTS</a>
+          <a href="cayenne.html">Cayenne Turbo</a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident tenetur.</p>
         </div>
 
