--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -128,9 +128,8 @@
         <a href="cayenne.html">
           <h1>Porsche 911 Turbo</h1>
         </a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam
-          distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident
-          tenetur.</p>
+        <p>A nuestros ingenieros les gusta hablar del automóvil deportivo más perfecto de la historia. 
+          Extremadamente deportivo, cómodo y apto para el día a día. Los modelos 911 Turbo avanzan por este camino.</p>
       </div>
 
       <img
@@ -144,9 +143,11 @@
         <a href="cayenne.html">
           <h2>Porsche GT3 RS</h2>
         </a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam
-          distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident
-          tenetur.</p>
+        <p>Los atletas saben: el máximo rendimiento requiere más que perfectas condiciones y suerte. Entrenamiento implacable para ser más fuerte y más rápido. 
+          Cuestionarte todo, especialmente a ti mismo. Aprendiendo de cada error. 
+          Porque el mayor desafío es permanecer imbatible. 
+          Con esta actitud, Porsche sigue empujando los límites de lo que es posible. 
+          Experimente el nuevo 911 GT3 RS en plena forma, con un mayor rendimiento en la pista de carreras.</p>
       </div>
 
       <img
@@ -161,9 +162,11 @@
         <a href="cayenne.html">
           <h2>Cayman SS</h2>
         </a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam
-          distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident
-          tenetur.</p>
+        <p>
+          Los modelos Cayman SS fueron hechos para el deporte. 
+          Son roadster con motor central que unen el espíritu deportivo del legendario Porsche Cayman SS con el automóvil deportivo del 
+          mañana y lo trasladan a las carreteras del mundo de hoy. 
+          Con un objetivo: sacar lo cotidiano de cada día.</p>
       </div>
 
       <img
@@ -177,9 +180,8 @@
         <a href="cayenne.html">
           <h2>Cayenne Turbo</h2>
         </a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam
-          distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident
-          tenetur.</p>
+        <p>Se ha ocupado otro lugar en la parrilla de salida de la serie de modelos Cayenne, con un rendimiento brutal y un dinamismo preciso. 
+          El Cayenne Turbo GT cumple todas las condiciones para estar a la vanguardia desde el principio.</p>
       </div>
 
       <img
