--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -38,7 +38,7 @@
 
   <!-- NAVBAR -->
 
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -85,9 +85,8 @@
 
       <div class="cayenne texto">
         <h1>Cayenne Turbo GTS</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ex atque minus harum autem pariatur magni ipsam
-          distinctio consectetur perferendis dolorum corrupti odio laborum, eaque dolore consequatur omnis provident
-          tenetur.</p>
+        <p>A nuestros ingenieros les gusta hablar del automóvil deportivo más perfecto de la historia. 
+          Extremadamente deportivo, cómodo y apto para el día a día. Los modelos 911 Turbo avanzan por este camino.</p>
       </div>
     </div>
 
@@ -98,8 +97,8 @@
 
       <div class="taycan texto">
         <h2>Taycan Turbo S</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, sed nisi. Alias, velit amet temporibus eum
-          nulla nemo incidunt debitis voluptatum adipisci sed quas, distinctio cum, architecto asperiores neque ad.</p>
+        <p>Cuando hacemos deporte, el mejor momento son siempre esos segundos después de la euforia experimentada, cuando el alma se encuentra en perfecto equilibrio. 
+          Con los nuevos modelos Taycan Sport Turismo podrá vivir esta sensación todos los días. Disfrute del equilibrio interior más activo.</p>
       </div>
     </div>
 
@@ -110,8 +109,11 @@
 
       <div class="911 texto">
         <h2>911 GT3 RS</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ratione doloribus ipsa officia consectetur?
-          Vitae similique, voluptate, ab ullam eligendi officiis porro ipsum, quia inventore odit ex culpa enim ea!</p>
+        <p>Los atletas saben: el máximo rendimiento requiere más que perfectas condiciones y suerte. Entrenamiento implacable para ser más fuerte y más rápido. 
+          Cuestionarte todo, especialmente a ti mismo. Aprendiendo de cada error. 
+          Porque el mayor desafío es permanecer imbatible. 
+          Con esta actitud, Porsche sigue empujando los límites de lo que es posible. 
+          Experimente el nuevo 911 GT3 RS en plena forma, con un mayor rendimiento en la pista de carreras.</p>
       </div>
     </div>
 
@@ -122,9 +124,10 @@
 
       <div class="718 texto">
         <h2>718 Cayman GTS 4.0</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti optio molestias, dolorum vero dolor
-          blanditiis assumenda est minus ipsum ducimus! Perspiciatis laborum exercitationem at ipsum voluptatum cumque
-          quis autem natus?</p>
+        <p>Los modelos Cayman SS fueron hechos para el deporte. 
+          Son roadster con motor central que unen el espíritu deportivo del legendario Porsche Cayman SS con el automóvil deportivo del 
+          mañana y lo trasladan a las carreteras del mundo de hoy. 
+          Con un objetivo: sacar lo cotidiano de cada día.</p>
       </div>
     </div>
 
