--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -37,7 +37,7 @@
 <body>
 
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -74,56 +74,74 @@
   </nav>
 
   <!-- GALERIA CONTENIDO -->
+  <div class="carousel-contenido">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
 
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../media/porscherwb.jpg" class="d-block w-100" alt="porsche trackday">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>Porsche performance</h1>
+            <p>¡Trackday specs, accesorios y más!</p>
+            <button type="button" class="btn btn-danger">Ver más</button>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="../media/porsche-neu.jpg" class="d-block w-100" alt="llanta porsche">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Porsche performance</h2>
+            <p>¡Llantas, neumaticos y mucho más!</p>
+            <button type="button" class="btn btn-danger">Ver más</button>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="../media/porschewhite.jpg" class="d-block w-100" alt="porsche nuevos modelos">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Nuevos modelos 2033</h2>
+            <p>Conoce los nuevos modelos de Porsche</p>
+            <button type="button" class="btn btn-danger">Conocé más</button>
+          </div>
+        </div>
+
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../media/porscherwb.jpg" class="d-block w-100" alt="porsche trackday">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Porsche performance</h1>
-          <p>¡Trackday specs, accesorios y más!</p>
-          <button type="button" class="btn btn-danger">Ver más</button>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <img src="../media/porsche-neu.jpg" class="d-block w-100" alt="llanta porsche">
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Porsche performance</h2>
-          <p>¡Llantas, neumaticos y mucho más!</p>
-          <button type="button" class="btn btn-danger">Ver más</button>
-        </div>
-      </div>
-
-      <div class="carousel-item">
-        <img src="../media/porschewhite.jpg" class="d-block w-100" alt="porsche nuevos modelos">
-        <div class="carousel-caption d-none d-md-block">
-          <h2>Nuevos modelos 2033</h2>
-          <p>Conoce los nuevos modelos de Porsche</p>
-          <button type="button" class="btn btn-danger">Conocé más</button>
-        </div>
-      </div>
-
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+
+  <div class="galeria-examples-1">
+    <img src="../media/porsche-2023.jpg">
+    <img src="../media/porsche-carrera.jpg">
+    <img src="../media/porsche-pista.jpg">
+    <img src="../media/porsche-normal.jpg">
+  </div>
+
+  <div class="galeria-examples-1">
+    <img src="../media/porsche-grey.jpg">
+    <img src="../media/porsche-green.jpg">
+    <img src="../media/porsche-yell.jpg">
+    <img src="../media/porsche-fut.jpg">
+  </div>
+
 
   <!-- FOOTER -->
 
