--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
 
   <div class="formulario">
     <form>
-      <h1>Contactanos</h1>
+      <title>Contactanos</title>
       <input type="text" name="nombre" placeholder="Tu nombre" class="nombre">
       <input type="email" name="mail" placeholder="Mail" class="mail" required>
       <textarea type="text" rows="4" cols="42 " name="mensaje" placeholder="Tu mensaje" class="mensaje"></textarea>
@@ -91,7 +91,7 @@
     <a href="../index.html"><img src="../media/porsche-logo.png" alt="logo porsche"></a>
 
     <div>
-      <h3 class="h3-footer">Porsche Uruguay</h3>
+      <b class="b-footer">Porsche Uruguay</b>
       <p class="p-footer">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
         molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
@@ -100,7 +100,7 @@
 
     <div class="menu">
 
-      <h3>Menú</h3>
+      <b>Menú</b>
 
       <ul>
         <li>
