--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -140,7 +140,7 @@
     <a href="../index.html"><img src="../media/porsche-logo.png" alt="porsche logo"></a>
 
     <div>
-      <h3 class="h3-footer">Porsche Uruguay</h3>
+      <b class="b-footer">Porsche Uruguay</b>
       <p class="p-footer">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
         molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
@@ -149,7 +149,7 @@
 
     <div class="menu">
 
-      <h3>Menú</h3>
+      <b>Menú</b>
 
       <ul>
         <li>
