--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -45,7 +45,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a href="../index.html"><img src="../media/porsche-logo.png" id="imgNav" alt="porsche logo"></a>
+      <a href="../index.html"><img src="../media/porschelogo.png" id="imgNav" alt="porsche logo"></a>
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
@@ -146,7 +146,7 @@
   <!-- FOOTER -->
 
   <div class="footer-content">
-    <a href="../index.html"><img src="../media/porsche-logo.png" alt="logo porsche"></a>
+    <a href="../index.html"><img src="../media/porschelogo.png" alt="logo porsche"></a>
 
     <div>
       <b class="b-footer">Porsche Uruguay</b>
