--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -46,7 +46,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <a href="../index.html"><img src="../media/porsche-logo.png" id="imgNav" alt="porsche logo"></a>
+      <a href="../index.html"><img src="../media/porschelogo.png" id="imgNav" alt="porsche logo"></a>
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
@@ -137,7 +137,7 @@
   <!-- FOOTER -->
 
   <div class="footer-content">
-    <a href="../index.html"><img src="../media/porsche-logo.png" alt="porsche logo"></a>
+    <a href="../index.html"><img src="../media/porschelogo.png" alt="porsche logo"></a>
 
     <div>
       <b class="b-footer">Porsche Uruguay</b>
