--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -142,8 +142,7 @@
     <div>
       <b class="b-footer">Porsche Uruguay</b>
       <p class="p-footer">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
+        C. Carlos Gardel, 11100 Montevideo, Departamento de Montevideo
       </p>
     </div>
 
